--- a/index.html
+++ b/index.html
@@ -409,10 +409,27 @@
         </svg>
       </button>
 
-      <p class="modal-text">Оставьте свои данные, мы вам перезвоним</p>
-      <form class="js-order-form">
-
-      </form>
+      <div class="form">
+        <p class="modal-text">Оставьте свои данные, мы вам перезвоним</p>
+        <form class="js-order-form">
+          <div class="form-field">
+            <label for="name">Имя</label>
+            <input type="name" id="name" placeholder="Иван">
+          </div>
+          <div class="form-field">
+            <label for="tel">Имя</label>
+            <input type="tel" id="tel" placeholder="+380671234567">
+          </div>
+          <div class="form-field">
+            <label for="mail">Почта</label>
+            <input type="mail" id="mail" placeholder="mail@mai.ru">
+          </div>
+          <div class="form-field">
+            <label for="name">Имя</label>
+            <input type="name" id="name" placeholder="Иван">
+          </div>
+        </form>
+      </div>
 
     </div>
   </div>
