форма подписки и модальное окно
разметка форм и стилизация

--- a/portfolio.html
+++ b/portfolio.html
@@ -268,7 +268,7 @@
               <input class="input" type="email" name="email" placeholder="E-mail" />
             </label>
           </form>
-          <button class="button button-title">подписаться
+          <button class="button button-title" type="submit">подписаться
             <svg class="icon" width="24" height="24">
               <use href="./images/icon/sprite.svg#icon-send"></use>
             </svg>
