--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
               <input class="input" type="email" name="email" placeholder="E-mail" />
             </label>
           </form>
-          <button class="button button-title">подписаться
+          <button class="button button-title" type="submit">подписаться
             <svg class="icon" width="24" height="24">
               <use href="./images/icon/sprite.svg#icon-send"></use>
             </svg>
@@ -441,10 +441,14 @@
             placeholder="Введите текст"></textarea>
         </div>
       </form>
-      <p class="consent">Соглашаюсь с рассылкой и принимаю <a class="consent link-contract" href="">Условия
-          договора</a></p>
-      <button class="form-submit" type="submit">Отправить</button>
 
+      <label class="checkbox-label">
+        <input class="checkbox-input" type="checkbox" name="checkbox">
+        <span class="icon-checkbox"></span> Соглашаюсь с рассылкой и
+        принимаю<a class="consent link-contract" href=""> Условия договора</a>
+      </label>
+
+      <button class="form-submit" type="submit">Отправить</button>
     </div>
   </div>
   <script src="./js/modal.js"></script>
