--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
         </svg>
       </button>
 
-      <form class="form js-order-form">
+      <form class="form js-speaker-form">
         <p class="modal-text">Оставьте свои данные, мы вам перезвоним</p>
         <div class="form-field">
           <label class="form-label" for="name">Имя</label>
@@ -455,7 +455,7 @@
 
   <script>
     (() => {
-      document.querySelector('.js-order-form').addEventListener('submit', e => {
+      document.querySelector('.js-speaker-form').addEventListener('submit', e => {
         e.preventDefault();
 
         new FormData(e.currentTarget).forEach((value, name) =>
