--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <p class="modal-text">Оставьте свои данные, мы вам перезвоним</p>
         <div class="form-field">
           <label class="form-label" for="name">Имя</label>
-          <input class="form-input" type="name" id="name">
+          <input class="form-input" type="text" name="user-name" id="name">
           <svg class="icon" width="18" height="18">
             <use href="./images/icon/sprite.svg#icon-person"></use>
           </svg>
@@ -421,7 +421,7 @@
 
         <div class="form-field">
           <label class="form-label" for="tel">Телефон</label>
-          <input class="form-input" type="tel" id="tel">
+          <input class="form-input" type="tel" name="phone-number" id="tel">
           <svg class="icon" width="18" height="18">
             <use href="./images/icon/sprite.svg#icon-phone"></use>
           </svg>
@@ -429,7 +429,7 @@
 
         <div class="form-field">
           <label class="form-label" for="mail">Почта</label>
-          <input class="form-input" type="email" id="mail">
+          <input class="form-input" type="email" name="e-mail" id="mail">
           <svg class="icon" width="18" height="18">
             <use href="./images/icon/sprite.svg#icon-email"></use>
           </svg>
