--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
 
         <div class="form-field">
           <label class="form-label" for="comments">Комментарий</label>
-          <textarea class="form-textarea" name="comment" id="comments" cols="30" rows="10"
+          <textarea class="form-textarea" type="text" name="comment" id="comments" cols="30" rows="10"
             placeholder="Введите текст"></textarea>
         </div>
       </form>
