--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
         <div class="form-field">
           <label class="form-label" for="mail">Почта</label>
-          <input class="form-input" type="email" name="e-mail" id="mail">
+          <input class="form-input" type="email" name="email" id="mail">
           <svg class="icon" width="18" height="18">
             <use href="./images/icon/sprite.svg#icon-email"></use>
           </svg>
