--- a/index.html
+++ b/index.html
@@ -384,9 +384,7 @@
         <p class="news-title">подпишитесь на рассылку</p>
         <div class="forms">
           <form name="signup_form">
-            <label>
-              <input class="input" type="email" name="email" placeholder="E-mail" />
-            </label>
+            <input class="input" type="email" name="email" placeholder="E-mail" />
           </form>
           <button class="button button-title" type="submit">подписаться
             <svg class="icon" width="24" height="24">
@@ -437,7 +435,7 @@
 
         <div class="form-field">
           <label class="form-label" for="comments">Комментарий</label>
-          <textarea class="form-textarea" type="text" name="comment" id="comments" cols="30" rows="10"
+          <textarea class="form-textarea" name="comment" id="comments" cols="30" rows="10"
             placeholder="Введите текст"></textarea>
         </div>
       </form>
